--- a/app/src/main/res/layout/view_currency_row.xml
+++ b/app/src/main/res/layout/view_currency_row.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/cardview_dark_background"
+                android:textColor="@color/colorBlack"
                 android:textSize="@dimen/card_view_title"
                 android:textStyle="bold"
                 tools:text="Title" />
