--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="card_view_title">20sp</dimen>
     <dimen name="card_view_subtitle">16sp</dimen>
     <dimen name="card_view_height">100dp</dimen>
+    <dimen name="margin_64dp">64dp</dimen>
+    <dimen name="margin_24dp">24dp</dimen>
+    <dimen name="currency_screen_title">20sp</dimen>
 </resources>
