--- a/app/src/main/res/layout/fragment_currencies.xml
+++ b/app/src/main/res/layout/fragment_currencies.xml
@@ -54,4 +54,17 @@
         tools:text="Please make sure you've got internet connection."
         tools:visibility="visible" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/reload_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/reload_button"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/currencies_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/screen_title"
+        tools:text="Try again"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
