--- a/app/src/main/res/layout/fragment_currencies.xml
+++ b/app/src/main/res/layout/fragment_currencies.xml
@@ -32,8 +32,8 @@
 
     <ProgressBar
         android:id="@+id/progress"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="@dimen/progress_size"
+        android:layout_height="@dimen/progress_size"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/currencies_list"
         app:layout_constraintEnd_toEndOf="parent"
