--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="margin_64dp">64dp</dimen>
     <dimen name="margin_24dp">24dp</dimen>
     <dimen name="currency_screen_title">20sp</dimen>
+    <dimen name="progress_size">64dp</dimen>
 </resources>
