--- a/app/src/main/res/layout/view_currency_row.xml
+++ b/app/src/main/res/layout/view_currency_row.xml
@@ -2,13 +2,13 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/margin_8dp"
     android:layout_marginTop="@dimen/margin_8dp"
     android:layout_marginRight="@dimen/margin_8dp"
     android:orientation="vertical"
+    app:cardElevation="0dp"
     tools:ignore="PrivateResource">
 
     <androidx.constraintlayout.widget.ConstraintLayout
