--- a/app/src/main/res/layout/fragment_currencies.xml
+++ b/app/src/main/res/layout/fragment_currencies.xml
@@ -56,14 +56,17 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/reload_button"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_64dp"
+        android:backgroundTint="@color/colorWhite"
         android:text="@string/reload_button"
+        android:textColor="@color/colorBlack"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/currencies_list"
+        app:layout_constraintBottom_toBottomOf="@+id/screen_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/screen_title"
+        app:layout_constraintTop_toTopOf="@+id/screen_title"
         tools:text="Try again"
         tools:visibility="visible" />
 
