--- a/app/src/main/res/layout/fragment_currencies.xml
+++ b/app/src/main/res/layout/fragment_currencies.xml
@@ -11,7 +11,7 @@
         android:id="@+id/screen_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_64dp"
+        android:layout_marginStart="@dimen/margin_currencies_fragment_title"
         android:layout_marginTop="@dimen/margin_24dp"
         android:text="@string/currency_screen_title"
         android:textColor="@color/colorBlack"
@@ -24,7 +24,7 @@
         android:id="@+id/currencies_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
