--- a/app/src/main/res/layout/fragment_currencies.xml
+++ b/app/src/main/res/layout/fragment_currencies.xml
@@ -5,6 +5,9 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".currencies.CurrenciesFragment">
 
     <com.google.android.material.textview.MaterialTextView
@@ -60,12 +63,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_64dp"
         android:text="@string/reload_button"
+        android:textAllCaps="false"
         android:textColor="@color/colorBlack"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/screen_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/screen_title"
-        android:textAllCaps="false"
         tools:text="Try again"
         tools:visibility="visible" />
 
